# mobatech

./: .gitignore
cpp/: CMakeLists.txt  main.cpp  run.sh
go/: abilities_rates.go  abilities_rates_test.go  aos_soa_test.go  go.mod  main_test.go  mem_align_test.go  pooling_test.go  profile.out  run.bat  stacks_vs_heap_test.go
go/using_time/: aos_soa.go
imgs/aos_soa_go/: info.txt
nodejs/: abilities_rates.js  abilities_rates_deno.js  db.mjs  handlers_insteadof_ref_deno.js  index.js  numbers_find.js  numbers_find_2.js  numbers_find_deno.js  object_values_deno.js  package-lock.json  package.json  strings_find_deno.js
nodejs/temp/: index.js  numbers_find.js  numbers_map_vs_arr.js
zig/src/: main.zig
